--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+certifi==2021.10.8
+charset-normalizer==2.0.12
 confluent-kafka==1.8.2
+idna==3.3
 pyaml-env==1.1.5
 python-dotenv==0.20.0
 PyYAML==5.4.1
+requests==2.27.1
+urllib3==1.26.9
