--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
-certifi==2021.10.8
+attrs==21.4.0
+certifi==2022.5.18.1
 charset-normalizer==2.0.12
 confluent-kafka==1.8.2
 idna==3.3
+iniconfig==1.1.1
+install==1.3.5
+packaging==21.3
+pluggy==1.0.0
+py==1.11.0
 pyaml-env==1.1.5
+pyparsing==3.0.9
+pytest==7.1.2
+pytest-mock==3.7.0
 python-dotenv==0.20.0
 PyYAML==5.4.1
 requests==2.27.1
+tomli==2.0.1
 urllib3==1.26.9
